--- a/market.html
+++ b/market.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>金・プラチナ価格予測</title>
+  <title>本日の相場</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>金・プラチナ価格予測</h1>
+    <h1>本日の金・プラチナ買取価格</h1>
     <nav>
       <a href="index.html">翌日予測</a>
       <a href="market.html">本日の相場</a>
@@ -17,10 +17,13 @@
   </header>
   <main>
     <section class="card">
-      <h2>2025年7月29日（火）予測</h2>
-      <p>🔶 金：<strong>17,305円/g</strong></p>
-      <p>⚪️ プラチナ：<strong>7,291円/g</strong></p>
-      <p class="note">※参考価格です。実際の価格は相場により変動します。</p>
+      <h2>2025年7月28日 更新</h2>
+      <ul>
+        <li>金：17,295円/g（前日比 -143円）</li>
+        <li>プラチナ：7,287円/g（前日比 -12円）</li>
+        <li>パラジウム：5,961円/g（前日比 +10円）</li>
+      </ul>
+      <p class="note">※業者様専用の買取価格となります。</p>
     </section>
   </main>
   <footer>© 2025 株式会社Go</footer>
