--- a/market.html
+++ b/market.html
@@ -4,26 +4,49 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>本日の相場</title>
+  <title>本日の買取価格</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>本日の金・プラチナ買取価格</h1>
+    <h1>本日の買取価格</h1>
     <nav>
       <a href="index.html">翌日予測</a>
-      <a href="market.html">本日の相場</a>
+      <a href="market.html" class="active">本日の相場</a>
     </nav>
   </header>
   <main>
     <section class="card">
-      <h2>2025年7月28日 更新</h2>
-      <ul>
-        <li>金：17,295円/g（前日比 -143円）</li>
-        <li>プラチナ：7,287円/g（前日比 -12円）</li>
-        <li>パラジウム：5,961円/g（前日比 +10円）</li>
-      </ul>
-      <p class="note">※業者様専用の買取価格となります。</p>
+      <h2>買取価格（2025年7月28日更新）</h2>
+      <div class="price-cards">
+        <div class="price-box gold">
+          <h3>金（Gold）</h3>
+          <p class="main-price">17,295円/g</p>
+          <p class="sub">前日比：-143円</p>
+        </div>
+        <div class="price-box platinum">
+          <h3>プラチナ（Platinum）</h3>
+          <p class="main-price">7,287円/g</p>
+          <p class="sub">前日比：-12円</p>
+        </div>
+        <div class="price-box palladium">
+          <h3>パラジウム（Palladium）</h3>
+          <p class="main-price">5,961円/g</p>
+          <p class="sub">前日比：+10円</p>
+        </div>
+      </div>
+      <div class="table-wrapper">
+        <h3>地金別価格一覧</h3>
+        <table>
+          <tr><th>種類</th><th>買取価格</th></tr>
+          <tr><td>K24</td><td>17,295円/g</td></tr>
+          <tr><td>K18</td><td>13,000円/g</td></tr>
+          <tr><td>Pt900</td><td>6,800円/g</td></tr>
+          <tr><td>Pt850</td><td>6,500円/g</td></tr>
+          <tr><td>パラジウム</td><td>5,961円/g</td></tr>
+        </table>
+      </div>
+      <p class="note">※参考価格です。実際の価格は日々の相場により変動します。</p>
     </section>
   </main>
   <footer>© 2025 株式会社Go</footer>
