--- a/index.html
+++ b/index.html
@@ -3,26 +3,48 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>金・プラチナ価格予測</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      background-color: #111;
+      color: #fff;
+    }
+    nav {
+      background-color: #1c1c1e;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 1px solid #333;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      margin-right: 2rem;
+      font-size: 1rem;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    .title {
+      padding: 2rem;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>金・プラチナ価格予測</h1>
-    <nav>
-      <a href="index.html">翌日予測</a>
-      <a href="market.html">本日の相場</a>
-    </nav>
-  </header>
-  <main>
-    <section class="card">
-      <h2>2025年7月29日（火）予測</h2>
-      <p>🔶 金：<strong>17,305円/g</strong></p>
-      <p>⚪️ プラチナ：<strong>7,291円/g</strong></p>
-      <p class="note">※参考価格です。実際の価格は相場により変動します。</p>
-    </section>
-  </main>
-  <footer>© 2025 株式会社Go</footer>
+  <nav>
+    <div>
+      <a href="index.html">明日のAI予測相場</a>
+      <a href="market.html">本日の貴金属買取相場</a>
+    </div>
+  </nav>
+  <div class="title">
+    <h1>AIによる金・プラチナ価格予測サイト</h1>
+    <p>ナビバーで予測相場と本日の買取相場を切り替えられます。</p>
+  </div>
 </body>
 </html>
