--- a/index.html
+++ b/index.html
@@ -2,49 +2,11 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>金・プラチナ価格予測</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-      background-color: #111;
-      color: #fff;
-    }
-    nav {
-      background-color: #1c1c1e;
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      border-bottom: 1px solid #333;
-    }
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      margin-right: 2rem;
-      font-size: 1rem;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    .title {
-      padding: 2rem;
-      text-align: center;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>宮善貴金属</title>
 </head>
-<body>
-  <nav>
-    <div>
-      <a href="index.html">明日のAI予測相場</a>
-      <a href="market.html">本日の貴金属買取相場</a>
-    </div>
-  </nav>
-  <div class="title">
-    <h1>AIによる金・プラチナ価格予測サイト</h1>
-    <p>ナビバーで予測相場と本日の買取相場を切り替えられます。</p>
-  </div>
+<body style="background-color:#000; color:#fff; text-align:center; padding-top:50px;">
+    <img src="img/miyazen_logo.png" alt="宮善貴金属のロゴ" width="200">
+    <h1>ようこそ、宮善貴金属へ</h1>
 </body>
 </html>
